--- a/style.css
+++ b/style.css
@@ -28,20 +28,35 @@ ul li a:hover {
 }
 
 /* Centers the main heading and aligns subheadings to the left */
-h1 {
-    text-align: center;
-}
-
-h2 {
-    text-align: left;
-}
-
-p1 {
+#main-heading {
     text-align: center;
     color: black;
+    font-size: 50px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+/* Style for Paragraphs */
+p {
+    text-align: left;
+    color: black;
     font-size: 20px;
-    margin-left: 20px;
-    margin-right: 20px;
+    margin-left: 80px;
+    margin-right: 80px;
+    padding: 20px;
+}
+
+h1.About {
+    text-align: center;
+}
+
+div.abstract, p1 {
+    text-align: left;
+    color: black;
+    font-size: 25px;
+    margin-left: 80px;
+    margin-right: 80px;
+    padding: 50px;
 }
 
 
@@ -61,4 +76,29 @@ table, th, td {
     text-align: center;
     margin-left: auto;
     margin-right: auto;
+}
+/* Style for Table Headers */
+div.keyterms {
+    background-color: rgb(75, 146, 75);
+    border: 2px solid black;
+    padding: 0px;
+    margin:11px;
+}
+
+/* Style for Images */
+img.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
+
+div.logos {
+    text-align: center;
+    margin-left: 20px;
+}
+
+/*Link Hover Effect*/
+a:hover {
+    color: rgb(13, 151, 13) 
 }
