--- a/style.css
+++ b/style.css
@@ -246,4 +246,60 @@ div.quiz-container {
     border-color: #c82333 !important;
 }
 
+/* Style for Mobile Resolutions */
+@media screen and (max-width: 600px) {
+    body {
+        font-size: 14px;
+    }
+    ul li a {
+        padding: 10px 12px;
+        font-size: 14px;
+    }
+    #main-heading {
+        font-size: 30px;
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+    p {
+        font-size: 16px;
+        margin-left: 20px;
+        margin-right: 20px;
+        padding: 10px;
+    }
+    table, th, td {
+        font-size: 12px;
+    }
+    .quiz-container {
+        width: 90%;
+        padding: 20px;
+    }
+}
 
+ /* Style for Desktop Resolutions */
+@media screen and (min-width: 601px) {
+    body {
+        font-size: 18px;
+    }
+    ul li a {
+        padding: 14px 16px;
+        font-size: 16px;
+    }
+    #main-heading {
+        font-size: 50px;
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
+    p {
+        font-size: 20px;
+        margin-left: 80px;
+        margin-right: 80px;
+        padding: 20px;
+    }
+    table, th, td {
+        font-size: 16px;
+    }
+    .quiz-container {
+        width: 1000px;
+        padding: 50px;
+    }
+}
